@@ -65,8 +65,9 @@ public class AntCompiler extends Compiler {
     // Lazy eval - if we don't need to compile we probably don't need the project
     protected Project getProject() {
 
-        if (project != null)
+        if (project != null) {
             return project;
+        }
 
         // Initializing project
         project = new Project();
@@ -74,15 +75,16 @@ public class AntCompiler extends Compiler {
         logger.setOutputPrintStream(System.out);
         logger.setErrorPrintStream(System.err);
         logger.setMessageOutputLevel(Project.MSG_INFO);
-        project.addBuildListener( logger);
+        project.addBuildListener(logger);
         if (System.getProperty(Constants.CATALINA_HOME_PROP) != null) {
             project.setBasedir(System.getProperty(Constants.CATALINA_HOME_PROP));
         }
 
-        if( options.getCompiler() != null ) {
-            if( log.isDebugEnabled() )
-                log.debug("Compiler " + options.getCompiler() );
-            project.setProperty("build.compiler", options.getCompiler() );
+        if (options.getCompiler() != null) {
+            if (log.isTraceEnabled()) {
+                log.trace("Compiler " + options.getCompiler());
+            }
+            project.setProperty("build.compiler", options.getCompiler());
         }
         project.init();
         return project;
@@ -93,9 +95,7 @@ public class AntCompiler extends Compiler {
         protected final StringBuilder reportBuf = new StringBuilder();
 
         @Override
-        protected void printMessage(final String message,
-                final PrintStream stream,
-                final int priority) {
+        protected void printMessage(final String message, final PrintStream stream, final int priority) {
         }
 
         @Override
@@ -114,12 +114,9 @@ public class AntCompiler extends Compiler {
     // --------------------------------------------------------- Public Methods
 
 
-    /**
-     * Compile the servlet from .java file to .class file
-     */
     @Override
     protected void generateClass(Map<String,SmapStratum> smaps)
-        throws FileNotFoundException, JasperException, Exception {
+            throws FileNotFoundException, JasperException, Exception {
 
         long t1 = 0;
         if (log.isDebugEnabled()) {
@@ -132,9 +129,9 @@ public class AntCompiler extends Compiler {
 
         StringBuilder errorReport = new StringBuilder();
 
-        StringBuilder info=new StringBuilder();
-        info.append("Compile: javaFileName=" + javaFileName + "\n" );
-        info.append("    classpath=" + classpath + "\n" );
+        StringBuilder info = new StringBuilder();
+        info.append("Compile: javaFileName=" + javaFileName + "\n");
+        info.append("    classpath=" + classpath + "\n");
 
         // Start capturing the System.err output for this thread
         SystemLogHandler.setThread();
@@ -155,9 +152,8 @@ public class AntCompiler extends Compiler {
             info.append("    cp=" + repository + "\n");
         }
 
-        if (log.isDebugEnabled()) {
-            log.debug( "Using classpath: " + System.getProperty("java.class.path") +
-                    File.pathSeparator + classpath);
+        if (log.isTraceEnabled()) {
+            log.trace("Using classpath: " + System.getProperty("java.class.path") + File.pathSeparator + classpath);
         }
 
         // Initializing sourcepath
@@ -175,22 +171,6 @@ public class AntCompiler extends Compiler {
             info.append("    extension dir=" + exts + "\n");
         }
 
-        // Add endorsed directories if any are specified and we're forking
-        // See Bugzilla 31257
-        if(ctxt.getOptions().getFork()) {
-            String endorsed = System.getProperty("java.endorsed.dirs");
-            if(endorsed != null) {
-                Javac.ImplementationSpecificArgument endorsedArg =
-                    javac.createCompilerArg();
-                endorsedArg.setLine("-J-Djava.endorsed.dirs=" +
-                        quotePathList(endorsed));
-                info.append("    endorsed dir=" + quotePathList(endorsed) +
-                        "\n");
-            } else {
-                info.append("    no endorsed dirs specified\n");
-            }
-        }
-
         // Configure the compiler object
         javac.setEncoding(javaEncoding);
         javac.setClasspath(path);
@@ -198,7 +178,7 @@ public class AntCompiler extends Compiler {
         javac.setSrcdir(srcPath);
         javac.setTempdir(options.getScratchDir());
         javac.setFork(ctxt.getOptions().getFork());
-        info.append("    srcDir=" + srcPath + "\n" );
+        info.append("    srcDir=" + srcPath + "\n");
 
         // Set the Java compiler to use
         if (options.getCompiler() != null) {
@@ -220,7 +200,7 @@ public class AntCompiler extends Compiler {
         PatternSet.NameEntry includes = javac.createInclude();
 
         includes.setName(ctxt.getJavaPath());
-        info.append("    include="+ ctxt.getJavaPath() + "\n" );
+        info.append("    include=" + ctxt.getJavaPath() + "\n");
 
         BuildException be = null;
 
@@ -228,7 +208,7 @@ public class AntCompiler extends Compiler {
             if (ctxt.getOptions().getFork()) {
                 javac.execute();
             } else {
-                synchronized(javacLock) {
+                synchronized (javacLock) {
                     javac.execute();
                 }
             }
@@ -250,16 +230,15 @@ public class AntCompiler extends Compiler {
         if (!ctxt.keepGenerated()) {
             File javaFile = new File(javaFileName);
             if (!javaFile.delete()) {
-                throw new JasperException(Localizer.getMessage(
-                        "jsp.warning.compiler.javafile.delete.fail", javaFile));
+                throw new JasperException(Localizer.getMessage("jsp.warning.compiler.javafile.delete.fail", javaFile));
             }
         }
 
         if (be != null) {
             String errorReportString = errorReport.toString();
             log.error(Localizer.getMessage("jsp.error.compilation", javaFileName, errorReportString));
-            JavacErrorDetail[] javacErrors = ErrorDispatcher.parseJavacErrors(
-                    errorReportString, javaFileName, pageNodes);
+            JavacErrorDetail[] javacErrors =
+                    ErrorDispatcher.parseJavacErrors(errorReportString, javaFileName, pageNodes);
             if (javacErrors != null) {
                 errDispatcher.javacError(javacErrors);
             } else {
@@ -267,10 +246,9 @@ public class AntCompiler extends Compiler {
             }
         }
 
-        if( log.isDebugEnabled() ) {
+        if (log.isDebugEnabled()) {
             long t2 = System.currentTimeMillis();
-            log.debug("Compiled " + ctxt.getServletJavaFileName() + " "
-                      + (t2-t1) + "ms");
+            log.debug(Localizer.getMessage("jsp.compiled", ctxt.getServletJavaFileName(), Long.valueOf(t2 - t1)));
         }
 
         logger = null;
@@ -286,25 +264,6 @@ public class AntCompiler extends Compiler {
         }
     }
 
-    private String quotePathList(String list) {
-        StringBuilder result = new StringBuilder(list.length() + 10);
-        StringTokenizer st = new StringTokenizer(list, File.pathSeparator);
-        while (st.hasMoreTokens()) {
-            String token = st.nextToken();
-            if (token.indexOf(' ') == -1) {
-                result.append(token);
-            } else {
-                result.append('\"');
-                result.append(token);
-                result.append('\"');
-            }
-            if (st.hasMoreTokens()) {
-                result.append(File.pathSeparatorChar);
-            }
-        }
-        return result.toString();
-    }
-
 
     protected static class SystemLogHandler extends PrintStream {
 
@@ -314,6 +273,7 @@ public class AntCompiler extends Compiler {
 
         /**
          * Construct the handler to capture the output of the given steam.
+         *
          * @param wrapped The wrapped stream
          */
         public SystemLogHandler(PrintStream wrapped) {
@@ -334,15 +294,13 @@ public class AntCompiler extends Compiler {
         /**
          * Thread &lt;-&gt; PrintStream associations.
          */
-        protected static final ThreadLocal<PrintStream> streams =
-                new ThreadLocal<>();
+        protected static final ThreadLocal<PrintStream> streams = new ThreadLocal<>();
 
 
         /**
          * Thread &lt;-&gt; ByteArrayOutputStream associations.
          */
-        protected static final ThreadLocal<ByteArrayOutputStream> data =
-                new ThreadLocal<>();
+        protected static final ThreadLocal<ByteArrayOutputStream> data = new ThreadLocal<>();
 
 
         // --------------------------------------------------------- Public Methods
@@ -359,6 +317,7 @@ public class AntCompiler extends Compiler {
 
         /**
          * Stop capturing thread's output and return captured data as a String.
+         *
          * @return the captured output
          */
         public static String unsetThread() {
@@ -377,6 +336,7 @@ public class AntCompiler extends Compiler {
 
         /**
          * Find PrintStream to which the output must be written to.
+         *
          * @return the current stream
          */
         protected PrintStream findStream() {
@@ -408,7 +368,7 @@ public class AntCompiler extends Compiler {
 
         @Override
         protected void setError() {
-            //findStream().setError();
+            // findStream().setError();
         }
 
         @Override
@@ -417,8 +377,7 @@ public class AntCompiler extends Compiler {
         }
 
         @Override
-        public void write(byte[] b)
-            throws IOException {
+        public void write(byte[] b) throws IOException {
             findStream().write(b);
         }
 
