@@ -14,7 +14,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.apache.jasper.servlet;
 
 import java.io.FileNotFoundException;
@@ -22,16 +21,15 @@ import java.io.IOException;
 import java.util.HashMap;
 import java.util.Map;
 
-import javax.servlet.RequestDispatcher;
-import javax.servlet.Servlet;
-import javax.servlet.ServletConfig;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletException;
-import javax.servlet.SingleThreadModel;
-import javax.servlet.UnavailableException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.jsp.tagext.TagInfo;
+import jakarta.servlet.RequestDispatcher;
+import jakarta.servlet.Servlet;
+import jakarta.servlet.ServletConfig;
+import jakarta.servlet.ServletContext;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.UnavailableException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.jsp.tagext.TagInfo;
 
 import org.apache.jasper.JasperException;
 import org.apache.jasper.JspCompilationContext;
@@ -67,8 +65,6 @@ import org.apache.tomcat.Jar;
  * @author Glenn Nielsen
  * @author Tim Fennell
  */
-
-@SuppressWarnings("deprecation") // Have to support SingleThreadModel
 public class JspServletWrapper {
 
     private static final Map<String,Long> ALWAYS_OUTDATED_DEPENDENCIES =
@@ -82,20 +78,27 @@ public class JspServletWrapper {
     // Logger
     private final Log log = LogFactory.getLog(JspServletWrapper.class); // must not be static
 
-    private Servlet theServlet;
+    private volatile Servlet theServlet;
     private final String jspUri;
-    private Class<?> tagHandlerClass;
+    private volatile Class<?> tagHandlerClass;
     private final JspCompilationContext ctxt;
     private long available = 0L;
     private final ServletConfig config;
     private final Options options;
-    private volatile boolean firstTime = true;
-    /** Whether the servlet needs reloading on next access */
+    /*
+     * The servlet / tag file needs a compilation check on first access. Use a
+     * separate flag (rather then theServlet == null / tagHandlerClass == null
+     * as it avoids the potentially expensive isOutDated() calls in
+     * ctxt.compile() if there are multiple concurrent requests for the servlet
+     * / tag before the class has been loaded.
+     */
+    private volatile boolean mustCompile = true;
+    /* Whether the servlet/tag file needs reloading on next access */
     private volatile boolean reload = true;
     private final boolean isTagFile;
     private int tripCount;
     private JasperException compileException;
-    /** Timestamp of last time servlet resource was modified */
+    /* Timestamp of last time servlet resource was modified */
     private volatile long servletClassLastModifiedTime;
     private long lastModificationTest = 0L;
     private long lastUsageTime = System.currentTimeMillis();
@@ -153,15 +156,29 @@ public class JspServletWrapper {
         this.reload = reload;
     }
 
+    public boolean getReload() {
+        return reload;
+    }
+
+    private boolean getReloadInternal() {
+        return reload && !ctxt.getRuntimeContext().isCompileCheckInProgress();
+    }
+
     public Servlet getServlet() throws ServletException {
-        // DCL on 'reload' requires that 'reload' be volatile
-        // (this also forces a read memory barrier, ensuring the
-        // new servlet object is read consistently)
-        if (reload) {
+        /*
+         * DCL on 'reload' requires that 'reload' be volatile
+         * (this also forces a read memory barrier, ensuring the new servlet
+         * object is read consistently).
+         *
+         * When running in non development mode with a checkInterval it is
+         * possible (see BZ 62603) for a race condition to cause failures
+         * if a Servlet or tag is reloaded while a compile check is running
+         */
+        if (getReloadInternal() || theServlet == null) {
             synchronized (this) {
                 // Synchronizing on jsw enables simultaneous loading
                 // of different pages, but not the same page.
-                if (reload) {
+                if (getReloadInternal() || theServlet == null) {
                     // This is to maintain the original protocol.
                     destroy();
 
@@ -179,7 +196,7 @@ public class JspServletWrapper {
 
                     servlet.init(config);
 
-                    if (!firstTime) {
+                    if (theServlet != null) {
                         ctxt.getRuntimeContext().incrementJspReloadCount();
                     }
 
@@ -243,10 +260,12 @@ public class JspServletWrapper {
             if (ctxt.isRemoved()) {
                 throw new FileNotFoundException(jspUri);
             }
-            if (options.getDevelopment() || firstTime ) {
+            if (options.getDevelopment() || mustCompile) {
                 synchronized (this) {
-                    firstTime = false;
-                    ctxt.compile();
+                    if (options.getDevelopment() || mustCompile) {
+                        ctxt.compile();
+                        mustCompile = false;
+                    }
                 }
             } else {
                 if (compileException != null) {
@@ -254,9 +273,14 @@ public class JspServletWrapper {
                 }
             }
 
-            if (reload) {
-                tagHandlerClass = ctxt.load();
-                reload = false;
+            if (getReloadInternal() || tagHandlerClass == null) {
+                synchronized (this) {
+                    if (getReloadInternal() || tagHandlerClass == null) {
+                        tagHandlerClass = ctxt.load();
+                        // Volatile 'reload' forces in order write of 'tagHandlerClass'
+                        reload = false;
+                    }
+                }
             }
         } catch (FileNotFoundException ex) {
             throw new JasperException(ex);
@@ -287,15 +311,19 @@ public class JspServletWrapper {
      * Get a list of files that the current page has source dependency on.
      * @return the map of dependent resources
      */
-    public java.util.Map<String,Long> getDependants() {
+    public Map<String,Long> getDependants() {
         try {
             Object target;
             if (isTagFile) {
                 if (reload) {
-                    tagHandlerClass = ctxt.load();
-                    reload = false;
+                    synchronized (this) {
+                        if (reload) {
+                            tagHandlerClass = ctxt.load();
+                            reload = false;
+                        }
+                    }
                 }
-                target = tagHandlerClass.newInstance();
+                target = tagHandlerClass.getConstructor().newInstance();
             } else {
                 target = getServlet();
             }
@@ -361,12 +389,13 @@ public class JspServletWrapper {
             /*
              * (1) Compile
              */
-            if (options.getDevelopment() || firstTime ) {
+            if (options.getDevelopment() || mustCompile) {
                 synchronized (this) {
-                    firstTime = false;
-
-                    // The following sets reload to true, if necessary
-                    ctxt.compile();
+                    if (options.getDevelopment() || mustCompile) {
+                        // The following sets reload to true, if necessary
+                        ctxt.compile();
+                        mustCompile = false;
+                    }
                 }
             } else {
                 if (compileException != null) {
@@ -385,20 +414,10 @@ public class JspServletWrapper {
                 return;
             }
 
-        } catch (ServletException ex) {
-            if (options.getDevelopment()) {
-                throw handleJspException(ex);
-            }
-            throw ex;
         } catch (FileNotFoundException fnfe) {
             // File has been removed. Let caller handle this.
             throw fnfe;
-        } catch (IOException ex) {
-            if (options.getDevelopment()) {
-                throw handleJspException(ex);
-            }
-            throw ex;
-        } catch (IllegalStateException ex) {
+        } catch (ServletException | IOException | IllegalStateException ex) {
             if (options.getDevelopment()) {
                 throw handleJspException(ex);
             }
@@ -434,15 +453,7 @@ public class JspServletWrapper {
             /*
              * (4) Service request
              */
-            if (servlet instanceof SingleThreadModel) {
-               // sync on the wrapper so that the freshness
-               // of the page is determined right before servicing
-               synchronized (this) {
-                   servlet.service(request, response);
-                }
-            } else {
-                servlet.service(request, response);
-            }
+            servlet.service(request, response);
         } catch (UnavailableException ex) {
             String includeRequestUri = (String)
                 request.getAttribute(RequestDispatcher.INCLUDE_REQUEST_URI);
@@ -462,7 +473,7 @@ public class JspServletWrapper {
             response.sendError
                 (HttpServletResponse.SC_SERVICE_UNAVAILABLE,
                  ex.getMessage());
-        } catch (ServletException ex) {
+        } catch (ServletException | IllegalStateException ex) {
             if(options.getDevelopment()) {
                 throw handleJspException(ex);
             }
@@ -470,11 +481,6 @@ public class JspServletWrapper {
         } catch (IOException ex) {
             if (options.getDevelopment()) {
                 throw new IOException(handleJspException(ex).getMessage(), ex);
-            }
-            throw ex;
-        } catch (IllegalStateException ex) {
-            if(options.getDevelopment()) {
-                throw handleJspException(ex);
             }
             throw ex;
         } catch (Exception ex) {
@@ -534,7 +540,7 @@ public class JspServletWrapper {
      * information, and a snippet of the JSP to help debugging.
      * Please see https://bz.apache.org/bugzilla/show_bug.cgi?id=37062 and
      * http://www.tfenne.com/jasper/ for more details.
-     *</p>
+     * </p>
      *
      * @param ex the exception that was the cause of the problem.
      * @return a JasperException with more detailed information
