@@ -16,11 +16,13 @@
  */
 package org.apache.jasper.servlet;
 
+import java.net.URI;
 import java.net.URL;
 import java.util.Collection;
 
-import javax.servlet.ServletContext;
+import jakarta.servlet.ServletContext;
 
+import org.apache.jasper.compiler.Localizer;
 import org.apache.tomcat.util.descriptor.tld.TldResourcePath;
 
 public class TldPreScanned extends TldScanner {
@@ -43,12 +45,12 @@ public class TldPreScanned extends TldScanner {
                 String fileUrl = str.substring(a + 4, b);
                 String path = str.substring(b + 2);
                 try {
-                    parseTld(new TldResourcePath(new URL(fileUrl), null, path));
+                    parseTld(new TldResourcePath(new URI(fileUrl).toURL(), null, path));
                 } catch (Exception e) {
                     throw new IllegalStateException(e);
                 }
             } else {
-                throw new IllegalStateException("Bad tld url: "+str);
+                throw new IllegalStateException(Localizer.getMessage("jsp.error.tld.url", str));
             }
         }
     }
